<resources>
    <string name="app_name">MovieApp</string>

    <string name="app_name_version_fragment_about"><a href="https://github.com/AdrianHeLo/Movie-App-V2">Movie App v2.0.0</a></string>
    <string name="mission_fragment_about">Mission</string>
    <string name="mission_description_fragment_about">Millions of movies, TV shows and people to discover. Your gateway to the seventh art...</string>
    <string name="attributes_fragment_about">This application uses the <a href="https://www.themoviedb.org">TMDb</a> API.</string>
    <string name="author_fragment_about">Adrian Hernandez</string>
    <string name="job_fragment_about">Android Developer</string>

    <string name="close">close</string>
    <string name="open">open</string>

    <string name="movies_movie_nav_menu">Movies</string>
    <string name="series_movie_nav_menu">Series</string>
    <string name="options_movie_nav_menu">Options</string>

    <string name="popular_movie_nav_menu">Popular</string>
    <string name="playing_movie_nav_menu">Now Playing</string>
    <string name="upcoming_movie_nav_menu">Upcoming</string>
    <string name="rated_movie_nav_menu">Top Rated</string>

    <string name="popular_series_nav_menu">Popular</string>
    <string name="airing_today_series_nav_menu">Airing Today</string>
    <string name="on_the_air_series_nav_menu">On The Air</string>
    <string name="rated_series_nav_menu">Top Rated</string>

    <string name="about_options_movie_nav_menu">About</string>
    <string name="settings_options_movie_nav_menu">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="api_key">c58d486e39335c088f93249c7d26df58</string>
</resources>