<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.method.LinkMovementMethod"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        tools:context=".presentation.ui.fragments.AboutFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/app_logo_fragment_about"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_movie_launcher"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/version_fragment_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_version_fragment_about"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textColorLink="@color/black"
                android:movementMethod="@{LinkMovementMethod.getInstance()}"
                app:layout_constraintTop_toBottomOf="@+id/app_logo_fragment_about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/mission_container_fragment_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/blue_light"
                app:layout_constraintTop_toBottomOf="@+id/version_fragment_about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mission_fragment_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mission_fragment_about"
                        android:textSize="25sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/mission_description_fragment_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/mission_description_fragment_about"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:textStyle="italic"/>

                    <ImageView
                        android:id="@+id/tmdb_logo_fragment_about"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:background="@drawable/tmdb_logo"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tmdb_attributes_fragment_about"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/attributes_fragment_about"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:layout_gravity="center"
                        android:textColorLink="@color/white"
                        android:movementMethod="@{LinkMovementMethod.getInstance()}"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/author_container_fragment_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/blue_light"
                app:layout_constraintTop_toBottomOf="@+id/mission_container_fragment_about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/author_image_fragment_about"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_person"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/author_name_fragment_about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/author_fragment_about"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="italic"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/job_fragment_about"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>


